bench/tests/plans/snapshots/r#mod__plans__wind_farm__Wind Farm - ProductionQuery2 (Execution Plan).snap
---
source: bench/tests/plans/wind_farm.rs
expression: canonicalize_uuids(&string)
---
ProjectionExec: expr=[ENC_PT(site_label@0) as site_label, ENC_PT(wtur_label@1) as wtur_label, ENC_PT(t@3) as t, ENC_PT(val@2) as val]
  CoalesceBatchesExec: target_batch_size=8192
    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(dp@2, dp@0)], projection=[site_label@0, wtur_label@1, val@3, t@5]
      CoalesceBatchesExec: target_batch_size=8192
        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(dp@2, dp@0)], projection=[site_label@0, wtur_label@1, dp@2, val@4]
          CoalesceBatchesExec: target_batch_size=8192
            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(ts@2, ts@0)], projection=[site_label@0, wtur_label@1, dp@4]
              CoalesceBatchesExec: target_batch_size=8192
                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(ts@2, ts@0)], projection=[site_label@0, wtur_label@1, ts@2]
                  CoalesceBatchesExec: target_batch_size=8192
                    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(generator@2, generator@0)], projection=[site_label@0, wtur_label@1, ts@4]
                      CoalesceBatchesExec: target_batch_size=8192
                        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(generator@2, generator@0)], projection=[site_label@0, wtur_label@1, generator@2]
                          CoalesceBatchesExec: target_batch_size=8192
                            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(generator_asp@2, generator_asp@1)], projection=[site_label@0, wtur_label@1, generator@3]
                              CoalesceBatchesExec: target_batch_size=8192
                                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(gensys@2, gensys@0)], projection=[site_label@0, wtur_label@1, generator_asp@4]
                                  CoalesceBatchesExec: target_batch_size=8192
                                    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(gensys@2, gensys@0)], projection=[site_label@0, wtur_label@1, gensys@2]
                                      CoalesceBatchesExec: target_batch_size=8192
                                        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(gensys_asp@2, gensys_asp@1)], projection=[site_label@0, wtur_label@1, gensys@3]
                                          CoalesceBatchesExec: target_batch_size=8192
                                            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(wtur@2, wtur@0)], projection=[site_label@0, wtur_label@1, gensys_asp@4]
                                              CoalesceBatchesExec: target_batch_size=8192
                                                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(wtur@2, wtur@0)], projection=[site_label@0, wtur_label@1, wtur@2]
                                                  CoalesceBatchesExec: target_batch_size=8192
                                                    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(wtur_asp@1, wtur_asp@1)], projection=[site_label@0, wtur_label@2, wtur@3]
                                                      CoalesceBatchesExec: target_batch_size=8192
                                                        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(wtur_asp@1, wtur_asp@0)], projection=[site_label@0, wtur_asp@1, wtur_label@3]
                                                          CoalesceBatchesExec: target_batch_size=8192
                                                            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(site@0, site@0)], projection=[site_label@1, wtur_asp@3]
                                                              CoalesceBatchesExec: target_batch_size=8192
                                                                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(site@0, site@0)], projection=[site@0, site_label@2]
                                                                  MemQuadPatternExec: , active_graph=Union of [DefaultGraph], subject=?site, predicate=<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>, object=<https://github.com/magbak/chrontext/rds_power#Site>
                                                                  CoalesceBatchesExec: target_batch_size=8192
                                                                    FilterExec: EBV(EQ(ENC_TV(site_label@1), 3:{value:Wind Mountain,language:}))
                                                                      MemQuadPatternExec: , active_graph=Union of [DefaultGraph], subject=?site, predicate=<http://www.w3.org/2000/01/rdf-schema#label>, object=?site_label
                                                              MemQuadPatternExec: , active_graph=Union of [DefaultGraph], subject=?site, predicate=<https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect>, object=?wtur_asp
                                                          CoalesceBatchesExec: target_batch_size=8192
                                                            FilterExec: EBV(EQ(__common_expr_2@0, 3:{value:A1,language:})) OR EBV(EQ(__common_expr_2@0, 3:{value:A2,language:})) OR EBV(EQ(__common_expr_2@0, 3:{value:A3,language:})) OR EBV(EQ(__common_expr_2@0, 3:{value:A4,language:})) OR EBV(EQ(__common_expr_2@0, 3:{value:A5,language:})) OR EBV(EQ(__common_expr_2@0, 3:{value:A6,language:})) OR EBV(EQ(__common_expr_2@0, 3:{value:A7,language:})) OR EBV(EQ(__common_expr_2@0, 3:{value:A8,language:})) OR EBV(EQ(__common_expr_2@0, 3:{value:A9,language:})) OR EBV(EQ(__common_expr_2@0, 3:{value:A10,language:})), projection=[wtur_asp@1, wtur_label@2]
                                                              ProjectionExec: expr=[ENC_TV(wtur_label@1) as __common_expr_2, wtur_asp@0 as wtur_asp, wtur_label@1 as wtur_label]
                                                                MemQuadPatternExec: , active_graph=Union of [DefaultGraph], subject=?wtur_asp, predicate=<http://www.w3.org/2000/01/rdf-schema#label>, object=?wtur_label
                                                      MemQuadPatternExec: , active_graph=Union of [DefaultGraph], subject=?wtur, predicate=<https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode>, object=?wtur_asp
                                                  MemQuadPatternExec: , active_graph=Union of [DefaultGraph], subject=?wtur, predicate=<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>, object=<https://github.com/magbak/chrontext/rds_power#A>
                                              MemQuadPatternExec: , active_graph=Union of [DefaultGraph], subject=?wtur, predicate=<https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect>, object=?gensys_asp
                                          MemQuadPatternExec: , active_graph=Union of [DefaultGraph], subject=?gensys, predicate=<https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode>, object=?gensys_asp
                                      MemQuadPatternExec: , active_graph=Union of [DefaultGraph], subject=?gensys, predicate=<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>, object=<https://github.com/magbak/chrontext/rds_power#RA>
                                  MemQuadPatternExec: , active_graph=Union of [DefaultGraph], subject=?gensys, predicate=<https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect>, object=?generator_asp
                              MemQuadPatternExec: , active_graph=Union of [DefaultGraph], subject=?generator, predicate=<https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode>, object=?generator_asp
                          MemQuadPatternExec: , active_graph=Union of [DefaultGraph], subject=?generator, predicate=<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>, object=<https://github.com/magbak/chrontext/rds_power#GAA>
                      MemQuadPatternExec: , active_graph=Union of [DefaultGraph], subject=?generator, predicate=<https://github.com/magbak/chrontext#hasTimeseries>, object=?ts
                  MemQuadPatternExec: , active_graph=Union of [DefaultGraph], subject=?ts, predicate=<http://www.w3.org/2000/01/rdf-schema#label>, object="Production"
              MemQuadPatternExec: , active_graph=Union of [DefaultGraph], subject=?ts, predicate=<https://github.com/magbak/chrontext#hasDataPoint>, object=?dp
          MemQuadPatternExec: , active_graph=Union of [DefaultGraph], subject=?dp, predicate=<https://github.com/magbak/chrontext#hasValue>, object=?val
      MemQuadPatternExec: , active_graph=Union of [DefaultGraph], subject=?dp, predicate=<https://github.com/magbak/chrontext#hasTimestamp>, object=?t
