bench/tests/plans/snapshots/r#mod__plans__wind_farm__Wind Farm - ProductionQuery2 (Optimized).snap
---
source: bench/tests/plans/wind_farm.rs
expression: canonicalize_uuids(&explanation.optimized_logical_plan.to_string())
---
Projection: ENC_PT(lhs.site_label) AS site_label, ENC_PT(lhs.wtur_label) AS wtur_label, ENC_PT(rhs.t) AS t, ENC_PT(lhs.val) AS val
  Inner Join: lhs.dp = rhs.dp
    SubqueryAlias: lhs
      Projection: lhs.site_label AS site_label, lhs.wtur_label AS wtur_label, lhs.dp AS dp, rhs.val AS val
        Inner Join: lhs.dp = rhs.dp
          SubqueryAlias: lhs
            Projection: lhs.site_label AS site_label, lhs.wtur_label AS wtur_label, rhs.dp AS dp
              Inner Join: lhs.ts = rhs.ts
                SubqueryAlias: lhs
                  Projection: lhs.site_label AS site_label, lhs.wtur_label AS wtur_label, lhs.ts AS ts
                    Inner Join: lhs.ts = rhs.ts
                      SubqueryAlias: lhs
                        Projection: lhs.site_label AS site_label, lhs.wtur_label AS wtur_label, rhs.ts AS ts
                          Inner Join: lhs.generator = rhs.generator
                            SubqueryAlias: lhs
                              Projection: lhs.site_label AS site_label, lhs.wtur_label AS wtur_label, lhs.generator AS generator
                                Inner Join: lhs.generator = rhs.generator
                                  SubqueryAlias: lhs
                                    Projection: lhs.site_label AS site_label, lhs.wtur_label AS wtur_label, rhs.generator AS generator
                                      Inner Join: lhs.generator_asp = rhs.generator_asp
                                        SubqueryAlias: lhs
                                          Projection: lhs.site_label AS site_label, lhs.wtur_label AS wtur_label, rhs.generator_asp AS generator_asp
                                            Inner Join: lhs.gensys = rhs.gensys
                                              SubqueryAlias: lhs
                                                Projection: lhs.site_label AS site_label, lhs.wtur_label AS wtur_label, lhs.gensys AS gensys
                                                  Inner Join: lhs.gensys = rhs.gensys
                                                    SubqueryAlias: lhs
                                                      Projection: lhs.site_label AS site_label, lhs.wtur_label AS wtur_label, rhs.gensys AS gensys
                                                        Inner Join: lhs.gensys_asp = rhs.gensys_asp
                                                          SubqueryAlias: lhs
                                                            Projection: lhs.site_label AS site_label, lhs.wtur_label AS wtur_label, rhs.gensys_asp AS gensys_asp
                                                              Inner Join: lhs.wtur = rhs.wtur
                                                                SubqueryAlias: lhs
                                                                  Projection: lhs.site_label AS site_label, lhs.wtur_label AS wtur_label, lhs.wtur AS wtur
                                                                    Inner Join: lhs.wtur = rhs.wtur
                                                                      SubqueryAlias: lhs
                                                                        Projection: lhs.site_label AS site_label, lhs.wtur_label AS wtur_label, rhs.wtur AS wtur
                                                                          Inner Join: lhs.wtur_asp = rhs.wtur_asp
                                                                            SubqueryAlias: lhs
                                                                              Projection: lhs.site_label AS site_label, lhs.wtur_asp AS wtur_asp, rhs.wtur_label AS wtur_label
                                                                                Inner Join: lhs.wtur_asp = rhs.wtur_asp
                                                                                  SubqueryAlias: lhs
                                                                                    Projection: lhs.site_label AS site_label, rhs.wtur_asp AS wtur_asp
                                                                                      Inner Join: lhs.site = rhs.site
                                                                                        SubqueryAlias: lhs
                                                                                          Projection: lhs.site AS site, rhs.site_label AS site_label
                                                                                            Inner Join: lhs.site = rhs.site
                                                                                              SubqueryAlias: lhs
                                                                                                QuadPattern (?site <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#Site>), active_graph: Union of [DefaultGraph] 
                                                                                              SubqueryAlias: rhs
                                                                                                Filter: EBV(EQ(ENC_TV(site_label), Union 3:{value:Wind Mountain,language:}))
                                                                                                  QuadPattern (?site <http://www.w3.org/2000/01/rdf-schema#label> ?site_label), active_graph: Union of [DefaultGraph] 
                                                                                        SubqueryAlias: rhs
                                                                                          QuadPattern (?site <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect> ?wtur_asp), active_graph: Union of [DefaultGraph] 
                                                                                  SubqueryAlias: rhs
                                                                                    Projection: wtur_asp, wtur_label
                                                                                      Filter: EBV(EQ(__common_expr_3, Union 3:{value:A1,language:})) OR EBV(EQ(__common_expr_3, Union 3:{value:A2,language:})) OR EBV(EQ(__common_expr_3, Union 3:{value:A3,language:})) OR EBV(EQ(__common_expr_3, Union 3:{value:A4,language:})) OR EBV(EQ(__common_expr_3, Union 3:{value:A5,language:})) OR EBV(EQ(__common_expr_3, Union 3:{value:A6,language:})) OR EBV(EQ(__common_expr_3, Union 3:{value:A7,language:})) OR EBV(EQ(__common_expr_3, Union 3:{value:A8,language:})) OR EBV(EQ(__common_expr_3, Union 3:{value:A9,language:})) OR EBV(EQ(__common_expr_3, Union 3:{value:A10,language:}))
                                                                                        Projection: ENC_TV(wtur_label) AS __common_expr_3, wtur_asp, wtur_label
                                                                                          QuadPattern (?wtur_asp <http://www.w3.org/2000/01/rdf-schema#label> ?wtur_label), active_graph: Union of [DefaultGraph] 
                                                                            SubqueryAlias: rhs
                                                                              QuadPattern (?wtur <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode> ?wtur_asp), active_graph: Union of [DefaultGraph] 
                                                                      SubqueryAlias: rhs
                                                                        QuadPattern (?wtur <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#A>), active_graph: Union of [DefaultGraph] 
                                                                SubqueryAlias: rhs
                                                                  QuadPattern (?wtur <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect> ?gensys_asp), active_graph: Union of [DefaultGraph] 
                                                          SubqueryAlias: rhs
                                                            QuadPattern (?gensys <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode> ?gensys_asp), active_graph: Union of [DefaultGraph] 
                                                    SubqueryAlias: rhs
                                                      QuadPattern (?gensys <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#RA>), active_graph: Union of [DefaultGraph] 
                                              SubqueryAlias: rhs
                                                QuadPattern (?gensys <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect> ?generator_asp), active_graph: Union of [DefaultGraph] 
                                        SubqueryAlias: rhs
                                          QuadPattern (?generator <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode> ?generator_asp), active_graph: Union of [DefaultGraph] 
                                  SubqueryAlias: rhs
                                    QuadPattern (?generator <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#GAA>), active_graph: Union of [DefaultGraph] 
                            SubqueryAlias: rhs
                              QuadPattern (?generator <https://github.com/magbak/chrontext#hasTimeseries> ?ts), active_graph: Union of [DefaultGraph] 
                      SubqueryAlias: rhs
                        QuadPattern (?ts <http://www.w3.org/2000/01/rdf-schema#label> "Production"), active_graph: Union of [DefaultGraph] 
                SubqueryAlias: rhs
                  QuadPattern (?ts <https://github.com/magbak/chrontext#hasDataPoint> ?dp), active_graph: Union of [DefaultGraph] 
          SubqueryAlias: rhs
            QuadPattern (?dp <https://github.com/magbak/chrontext#hasValue> ?val), active_graph: Union of [DefaultGraph] 
    SubqueryAlias: rhs
      QuadPattern (?dp <https://github.com/magbak/chrontext#hasTimestamp> ?t), active_graph: Union of [DefaultGraph]
